--- a/index.html
+++ b/index.html
@@ -3,45 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="keywords" content="mouzam"/>
+    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);function hideURLbar(){ window.scrollTo(0,1); } </script>
     <link rel="shortcut icon" type="image/png" href="./images/head-logo.png" />
     <title>Mouzam | Developer</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <!-- css=file -->
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/font-awesome.css" rel="stylesheet"> 
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all" />
+    <!-- js -->
+    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+    <!-- //js -->
+    <!-- fonting -->
+    <link href='//fonts.googleapis.com/css?family=Oleo+Script:400,700' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+    <link href="//fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
+    <!-- start-smooth-scrolling -->
+    <script type="text/javascript" src="js/move-top.js"></script>
+    <script type="text/javascript" src="js/easing.js"></script>
+    <script type="text/javascript">
+	  jQuery(document).ready(function($) {
+		$(".scroll").click(function(event){		
+			event.preventDefault();
+			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+		});
+	});
+</script>
+<!-- start-smooth-scrolling -->
 </head>
+
 <body>
-	<div class="menu-btn">
+	<!-- <div class="menu-btn">
 		<div class="menu-btn__burger  "></div>
+    </div> -->
+    <!-- //navigation starts here -->
+    <div class="banner-figures">
+      <div class="banner">
+        <div class="container banner-drop">
+          <div class="header">
+            <div class="header-left logo">
+              <h1><a href="index.html">Elegant Resume</a></h1>
+            </div>
+            <div class="header-right">
+              <nav>
+                <ul>
+                <li class="active">
+                  <a href="index.html" class="active"><span>Home</span></a>
+                </li>
+                <li>
+                  <a href="#about" class="scroll"><span>About</span></a>
+                </li>
+                <li>
+                  <a href="#experience" class="scroll"><span>Experience</span></a>
+                </li>
+                <li>
+                  <a href="#projects" class="scroll"><span>Projects</span></a>
+                </li>
+                <li>
+                  <a href="#contact" class="scroll"><span>Contact</span></a>
+                </li>
+                </ul>
+              </nav>
+              <div class="menu-icon animated wow zoomIn" data-wow-duration="1000ms" data-wow-delay="800ms"><span></span></div>
+            </div>
+            <div class="clearfix"> </div>
+          </div>
+        </div>
+      </div>
+     
+     <script>
+      (function($){
+        $(".menu-icon").on("click", function(){
+          $(this).toggleClass("open");
+          $(".container").toggleClass("nav-open");
+          $("nav ul li").toggleClass("animate");
+        });
+        
+      })(jQuery);
+    </script>
     </div>
-    <div class="header-right">
-        <nav>
-          <ul>
-            <li class="active">
-                <a href="index.html" class="active"><span>Home</span></a>
-            </li>
-            <li>
-                <a href="#about" class="scroll"><span>About</span></a>
-            </li>
-            <li>
-                <a href="#experience" class="scroll"><span>Experience</span></a>
-            </li>
-            <li>
-                <a href="#projects" class="scroll"><span>Projects</span></a>
-            </li>
-            <li>
-                <a href="#contact" class="scroll"><span>Contact</span></a>
-            </li>
-          </ul>
-        </nav>
-        <div class="menu-icon animated wow zoomIn" data-wow-duration="1000ms" data-wow-delay="800ms"><span></span></div>
-    </div>
-		
-
-
-		
-
-
-
 
 
 
