--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
 					<div class="clearfix"> </div>
 				</div>
 				<div class="name" >
-					<h2>Mouzam Pallakal</h2>
-					<p> Web Designer & Developer</p>
-				</div>
+					<h2>Mouzam Pallakal <br>
+					<span class="random-word"> <span>
+				</h2>
+        </div>
+        
 				<div class="social-icons animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="800ms">
 					<ul class="top-links">
 						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -93,7 +95,7 @@
 
 
 
-      <script src="app.js"></script>
+      <script src="function.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
