--- a/index1.html
+++ b/index1.html
@@ -9,9 +9,9 @@
     <link rel="shortcut icon" type="image/png" href="./images/head-logo.png" />
     <title>Mouzam | Developer</title>
     <!-- css=file -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/font-awesome.css" rel="stylesheet"> 
-    <link href="css/styles1.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="public/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="public/css/font-awesome.css" rel="stylesheet"> 
+    <link href="public/css/styles1.css" rel="stylesheet" type="text/css" media="all" />
     <!-- js -->
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
     <!-- //js -->
